add rk_preisp access authority
Change-Id: Iad5c466acefd72acdc22d9593eca8d68d54b2c77
Signed-off-by: dalon.zhang <dalon.zhang@rock-chips.com>

--- a/ueventd.rockchip.rc
+++ b/ueventd.rockchip.rc
@@ -90,6 +90,7 @@
 # for Camera
 /dev/camsys_marvin        0664        media        camera
 /dev/camsys_marvin1       0664        media        camera
+/dev/rk_preisp            0664        media        camera
 
 #for ddr freq
 /dev/ddr_freq        0664        system        graphics
